# Agentic-RAG

./: .env.example  .gitignore  README.md  pyproject.toml  web_qa.py
Data/: cr_f1_consolidated.json  create_benchmarks.py
Data/benchmark/: 2WikiMultihopQA_500_benchmark.json  2WikiMultihopQA_500_benchmark_chunked.checkpoint.json  HotpotQA_500_benchmark.json  HotpotQA_500_benchmark_chunked.checkpoint.json  MuSiQue_500_benchmark_chunked.checkpoint.json  run_benchmark_chunk.py
Eval/: base.py  checkpoint.py  compare_schemes.py  compute_metrics.py  extract_cot_answers.py  llm_only.py  metrics.py  naive_rag.py  prompts.py  run_eval.py
Eval/agentic_rag_v3_data/: 得到这些数据所运行的命令.txt
Eval/gen_ground_data/: 得到这些数据所运行的命令.txt
Eval/ir_cot_data/: 得到这些数据所运行的命令.txt
Index/: __init__.py  agentic_chunk.py  benchmark_chunker.py  benchmark_chunker_v2.py  benchmark_chunker_v3.py  milvus_cli.py  milvus_config.py  milvus_ingest.py  milvus_schema.py  semantic_chunker.py
Retrieval/: milvus_retriever.py  query_cli.py  web_retriever.py
agentic_rag/: evaluator.py  nodes.py  prompts.py  state.py  workflow.py
agentic_rag_v2/: __init__.py  evaluator.py  nodes.py  prompts.py  workflow.py
agentic_rag_v3/: __init__.py  evaluator.py  nodes.py  prompts.py  state.py  workflow.py
custom/: __init__.py  query_cli.py  retriever.py
frontend/: app.py  data_loader.py  styles.py
naive_rag/: __init__.py  nodes.py  prompts.py  run.py  state.py  workflow.py
rag_with_judge/: __init__.py  evaluator.py  nodes.py  prompts.py  state.py  workflow.py
streaming/: __init__.py  callbacks.py  runners.py
(+51 files in other folders)
