[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "ipykernel>=7.2.0",
    "numpy>=2.2.4",
    "matplotlib>=3.10.8",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=0.4.0",
    "scipy>=1.14.1",
    "pymilvus>=2.5.0",
    "langchain-milvus>=0.1.0",
    "dashscope>=1.20.0",
    "nltk>=3.9.4",
    "streamlit>=1.54.0",
    "pymupdf>=1.27.2.2",
    "networkx>=3.6.1",
    "streamlit-extras>=1.3.0",
    "streamlit-javascript>=0.1.5",
    "pandoc-tex-numbering>=1.3.3",
    "ijson>=3.5.0",
    "ddgs>=9.0.0",
]
